2001-11-24  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : mkdir the glib/generated dir.
	(gen_signal): Call new get_sighandler sub. Doesn't use the returned
	  value yet.  s/event/ev3nt on arg names.
	(get_sighandler): new sub to lookup or gen a signal helper/delegate.
	  Only generates the delegate so far.
	* codegen/hardcoded.defs : Added a stub for Gdk.Event.
	* gdk/Event.cs : Killed, now a generated struct.
	* gdk/SimpleEvent.cs (SimpleEventCallback): Use Marshal.PtrToStructure
	  to create the Event, not a ctor(IntPtr).
	* glib/SignalCallback.cs : New abstract base class for signal helpers.

2001-11-14  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Add System.Collections to usings. 
	s/event/signal. Add gen_signal sub and call it from gen_object.
	Mangle method names that collide with signal names by prepending
	Emit to the method name.
	* codegen/makefile : add gtk-signals.defs to the build.

2001-11-13  Mike Kestner <mkestner@speakeasy.net>

	* codegen/get-signals-from-source.pl : My own little perl signal 
	parser.  
	* codegen/gtk-signals.defs : Ripped the GtkWindow signals into here
	to goof with.

2001-11-10  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Fix String prop generation code.
	* gtk/Window.custom : Fix ctor param casting error.

2001-11-09  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Use the @ctors list to determine if a class
	is abstract.  There is an abstract indicator in the new defs format
	description, but it doesn't appear in the defs files currently. This
	method should be reliable though, even in the long term. Use the same
	check to determine if ctor(IntPtr obj) should be gen'd.

2001-11-09  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Now genning Window, AccelGroup, Bin, and
	GdkPixbuf classes to peel the csc error onion. Explicitly add GObject
	to the "exists ($objects{...})" branches, since GObject is a hard
	coded Class.
