@@ -1,3 +1,11 @@
+2001-11-25  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl (get_sighandler): gen the helper class. arg
+	  passing and return value handling need beefing up still.
+	* glib/SignalArgs.cs : New arg passing/ return value handling class.
+	* glib/SignalCallback.cs (dtor): kill, this will be gen'd in the 
+	  subclasses. (ctor): prune down to two params.
+
 2001-11-24  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/defs-parse.pl : mkdir the glib/generated dir.
